# fias-rs

./: Cargo.toml
examples/: read_version_date.rs
src/: actual.rs  lib.rs  models.rs  soap.rs
